--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
         <input type="submit" value="Enter">
     </form>
     <p> Or Create a New Account</p>
-    <a href="{% url 'create_account' %}"> sign up</a>
+    <a href="{% url 'user_creation' %}"> sign up</a>
 
 {% endif %}
 </body>
